# Mission

./: .gitignore  Cargo.toml  package-lock.json
Xuee/server/: Cargo.toml  migration_cards.sql  migration_fortune.sql
Xuee/server/api.test/: api-test.http
Xuee/server/src/: main.rs
Xuee/server/src/application/use_cases/: authentication.rs  brawlers.rs  cards.rs  crew_operation.rs  fortune.rs  mission_management.rs  mission_operation.rs  mission_viewing.rs  missions.rs  mod.rs
Xuee/server/src/config/: config_loader.rs  stage.rs
Xuee/server/src/domain/entities/: battles.rs  brawlers.rs  cards.rs  fortune.rs  missions.rs  mod.rs
Xuee/server/src/domain/repositories/: brawlers.rs  cards.rs  crew_operation.rs  fortune.rs  mission_management.rs  mission_viewing.rs  missions.rs  mod.rs
Xuee/server/src/domain/value_objects/: base64_imge.rs  brawler_model.rs  mission_model.rs  mission_statuses.rs
Xuee/server/src/infrastructure/: mod.rs
Xuee/server/src/infrastructure/argon2/: mod.rs
Xuee/server/src/infrastructure/database/: postgresql_connection.rs  schema.rs
Xuee/server/src/infrastructure/database/repositories/: brawlers.rs  cards.rs  crew_operation.rs  fortune.rs  mission_management.rs  mission_operation.rs  mission_viewing.rs  missions.rs  mod.rs
Xuee/server/src/infrastructure/http/: http_serv.rs  mod.rs
Xuee/server/src/infrastructure/http/middlewares/: auth.rs
Xuee/server/src/infrastructure/http/routers/: authentication.rs  brawlers.rs  cards.rs  debug.rs  default.rs  fortune.rs  missions.rs  (+3 more)
Xuee/server/src/infrastructure/jwt/: jwt_model.rs  mod.rs
Xuee/server/src/infrastructure/services/: email_service.rs  google_auth_service.rs  image_storage.rs  mod.rs
(+150 files in other folders)
