[package]
name = "server"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0"
argon2 = { version = "0.5", features = ["password-hash", "rand", "std"] }
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
diesel = { version = "2.1", default-features = false, features = ["serde_json", "chrono"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
dotenvy = "0.15"
hex = "0.4.3"
jsonwebtoken = "9.3"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder"] }
mockall = "0.12"
oauth2 = "4.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "native-tls"] }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10.6"
tokio = { version = "1.38", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Fix for LNK1318 error - Use Release mode optimization for Dev to avoid PDB bloat
[profile.dev]
debug = 0             # No debug info
strip = true          # Strip symbols
opt-level = 1         # Slight optimization to reduce binary size
incremental = false   # Disable incremental (can cause PDB issues)
codegen-units = 1     # Reduce parallelism to reduce linker memory usage
panic = "abort"       # Reduce binary size

[profile.release]
debug = 0
strip = true
lto = true
codegen-units = 1
panic = "abort"
